--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <html>
   <head>
-    <title>Angular App</title>
+    <title>Rock Paper Scissors Lizard Spock</title>
+    <script type="application/javascript">
+      var global = window;
+    </script>
   </head>
   <body>
   <my-app>loading</my-app>
