Some styling, add button for register

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,10 @@
     <script type="application/javascript">
       var global = window;
     </script>
+  <style>
+    body {background-color:#dddddd}
+  </style>
+
   </head>
   <body>
   <my-app>loading</my-app>
